--- a/public/assets/scss/default/_extends.scss
+++ b/public/assets/scss/default/_extends.scss
@@ -5,12 +5,15 @@
 %width-100 {
   width: 100%;
 }
+
 %height-100 {
   height: 100%;
 }
+
 %overflowHidden {
   overflow: hidden;
 }
+
 %cursorPointer {
   cursor: pointer;
 }
@@ -18,6 +21,7 @@
 %fontPrimary {
   font-family: var(--body-font);
 }
+
 %fontSecondary {
   font-family: var(--heading-font);
 }
@@ -29,6 +33,7 @@
 %hidden {
   visibility: hidden;
 }
+
 %visible {
   visibility: visible;
 }
@@ -36,24 +41,36 @@
 %absolute {
   position: absolute;
 }
+
 %relative {
   position: relative;
 }
+
 %inlineBlock {
   display: inline-block;
 }
+
 %block {
   display: block;
 }
+
 %textUppercase {
   text-transform: uppercase;
 }
+
 %textLowercase {
   text-transform: lowercase;
 }
+
 %textCapitalize {
   text-transform: capitalize;
 }
+
+%transition {
+  -webkit-transition: all .3s cubic-bezier(.645, .045, .355, 1);
+  transition: all .3s cubic-bezier(.645, .045, .355, 1);
+}
+
 
 // Font Weight
 %fontWeight900 {
@@ -120,6 +137,7 @@
   @include transform(translateY(-50%));
   z-index: 2;
 }
+
 %positionFull {
   height: 100%;
   width: 100%;
@@ -151,15 +169,19 @@
 %justify-center {
   @include justify-content(center);
 }
+
 %justify-start {
   @include justify-content(flex-start);
 }
+
 %justify-end {
   @include justify-content(flex-end);
 }
+
 %justify-around {
   @include justify-content(space-around);
 }
+
 %justify-between {
   @include justify-content(space-between);
 }
@@ -167,15 +189,19 @@
 %aline-start {
   @include align-items(flex-start);
 }
+
 %aline-end {
   @include align-items(flex-end);
 }
+
 %aline-center {
   @include align-items(center);
 }
+
 %aline-stretch {
   @include align-items(stretch);
 }
+
 %aline-baseline {
   @include align-items(baseline);
 }
@@ -207,21 +233,27 @@
 %absolute {
   position: absolute;
 }
+
 %relative {
   position: relative;
 }
+
 %inlineBlock {
   display: inline-block;
 }
+
 %block {
   display: block;
 }
+
 %textUppercase {
   text-transform: uppercase;
 }
+
 %textLowercase {
   text-transform: lowercase;
 }
+
 %textCapitalize {
   text-transform: capitalize;
 }
@@ -236,14 +268,32 @@ p:last-child {
   background-position: center center;
 }
 
+%textDecoration{
+  text-decoration: none;
+}
+.textDecoration{
+  text-decoration: none;
+}
+
+
+%listStyle {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.listStyle {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
 // GradientDefault
 
 %gradient-primary {
-  background: linear-gradient(
-    to right,
-    var(--primary-theme-color) 50%,
-    var(--secondary-theme-color) 50%
-  );
+  background: linear-gradient(to right,
+      var(--primary-theme-color) 50%,
+      var(--secondary-theme-color) 50%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -253,31 +303,26 @@ p:last-child {
 }
 
 %theme-default-gradient {
-  background: linear-gradient(
-    -259deg,
-    var(--primary-theme-color) 0,
-    var(--secondary-theme-color) 100%
-  );
+  background: linear-gradient(-259deg,
+      var(--primary-theme-color) 0,
+      var(--secondary-theme-color) 100%);
 }
+
 .bg-theme-gradient {
-  background: linear-gradient(
-    120deg,
-    #1c99fe 20.69%,
-    #7644ff 50.19%,
-    var(--primary-theme-color) 79.69%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='var(--primary-theme-color)', endColorstr='var(--secondary-theme-color)',GradientType=1 );
+  background: linear-gradient(120deg,
+      #1c99fe 20.69%,
+      #7644ff 50.19%,
+      var(--primary-theme-color) 79.69%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='var(--primary-theme-color)', endColorstr='var(--secondary-theme-color)', GradientType=1);
 }
 
 .theme-default-gradient {
   background: var(--primary-theme-color);
-  background: linear-gradient(
-    120deg,
-    #1c99fe 20.69%,
-    #7644ff 50.19%,
-    var(--primary-theme-color) 79.69%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='var(--primary-theme-color)', endColorstr='var(--secondary-theme-color)',GradientType=1 );
+  background: linear-gradient(120deg,
+      #1c99fe 20.69%,
+      #7644ff 50.19%,
+      var(--primary-theme-color) 79.69%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='var(--primary-theme-color)', endColorstr='var(--secondary-theme-color)', GradientType=1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   display: inline-block;
