--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -55,6 +55,7 @@ STYLE SHEET INDEX END
 *****************************************************/
 
 @import "header/header";
+@import "header/menu"
 
 /****************************************************
                  Footer Styles
