--- a/public/assets/scss/default/_typography.scss
+++ b/public/assets/scss/default/_typography.scss
@@ -14,7 +14,7 @@ img {
   overflow: hidden;
 }
 body {
-  overflow: hidden;
+  overflow-x: hidden;
   font-weight: 400;
   font-size: var(--font-size-lg);
   line-height: var(--line-height-lg);
