--- a/public/assets/scss/default/_variables.scss
+++ b/public/assets/scss/default/_variables.scss
@@ -1,15 +1,15 @@
 :root {
   // Body Colors
-  --primary-body-color: #337dff;
-  --secondary-body-color: #3eb75e;
+  --primary-body-color: #FFFFFF;
+  --secondary-body-color: #ECEEF2;
 
   // Theme Colors
-  --primary-theme-color: #337dff;
+  --primary-theme-color: #FF5700;
   --secondary-theme-color: #3eb75e;
 
   // Typography Colors
   --heading-color: #333;
-  --paragraph-color: #5e5e5e;
+  --paragraph-color: #4D4D4D;
 
   // Important Colors
   --gray-color: #808080;
