--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -55,8 +55,20 @@ STYLE SHEET INDEX END
 *****************************************************/
 
 @import "header/header";
-@import "header/menu"
+@import "header/menu";
 
+
+/****************************************************
+                 Button Styles
+*****************************************************/
+
+@import "common/button";
+
+/****************************************************
+                 Slider Styles
+*****************************************************/
+
+@import "components/slider";
 /****************************************************
                  Footer Styles
 *****************************************************/
