--- a/public/assets/scss/default/_typography.scss
+++ b/public/assets/scss/default/_typography.scss
@@ -117,6 +117,7 @@ h6,
 }
 
 p {
+  font-family: var(--body-font);
   font-size: var(--font-size-lg);
   line-height: var(--line-height-lg);
   margin-bottom: 30px;
