--- a/public/assets/scss/default/_quickCode.scss
+++ b/public/assets/scss/default/_quickCode.scss
@@ -3,8 +3,7 @@
 ==================================*/
 
 // Import Font
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,600,700,800,900|Poppins:300,400,500,600,700,700i&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700;1,800;1,900&display=swap');
 @media (min-width: 1200px) {
   .container {
     max-width: 1260px;
