--- a/public/assets/scss/default/_spacing.scss
+++ b/public/assets/scss/default/_spacing.scss
@@ -207,7 +207,7 @@
     .mtb-lg-#{5 * $i} {
       padding: 5px * $i 0;
     }
-    .mlr-lg-#{5 * $i} {
+    .mlr-lg-#{5 * $i} { 
       padding: 0 5px * $i;
     }
     .pl-lg-#{5 * $i} {
@@ -226,7 +226,7 @@
       margin-left: 5px * $i;
     }
     .mt-lg-#{5 * $i} {
-      margin-top: 5px * $i;
+      margin-top: 5px * $i !important;
     }
     .mr-lg-#{5 * $i} {
       margin-right: 5px * $i;
