--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -65,10 +65,11 @@ STYLE SHEET INDEX END
 @import "common/button";
 
 /****************************************************
-                 Slider Styles
+                 Component Styles
 *****************************************************/
 
 @import "components/slider";
+@import "components/featureHouse";
 /****************************************************
                  Footer Styles
 *****************************************************/
