--- a/public/assets/scss/common/_button.scss
+++ b/public/assets/scss/common/_button.scss
@@ -1,25 +1,103 @@
-
-
 /*=========================
     Button Option 
 ===========================*/
 
+.btn-transparent {
+  @extend %transition;
+  text-decoration: none;
+  font-size: 16px;
+  border: 2px solid var(--primary-theme-color);
+  background: var(--primary-theme-color);
+  color: var(--color-white);
+  border-radius: 10px;
+  font-weight: 600;
+  position: relative;
+  padding: 10px 20px;
+  display: inline-block;
 
-.btn-transparent{
-        @extend %transition;
-        text-decoration: none;
-        font-size: 16px;
-        border: 2px solid var(--primary-theme-color);
-        background: var(--primary-theme-color);
-        color: var(--color-white);
-        border-radius: 10px;
-        font-weight: 600;
-        position: relative;
-        padding: 10px 20px;
-        display: inline-block;
+  &:hover {
+    color: var(--primary-theme-color);
+    background: transparent;
+  }
+}
+.btn-transparent_opacity {
+  @extend %transition;
+  text-decoration: none;
+  font-size: 16px;
+  border: 2px solid var(--color-white);
+  background: transparent;
+  color: var(--color-white);
+  border-radius: 10px;
+  font-weight: 600;
+  position: relative;
+  padding: 10px 20px;
+  display: inline-block;
 
-        &:hover{
-            color: var(--primary-theme-color);
-            background: transparent;
-        }
+  &:hover {
+    color: var(--primary-theme-color);
+    background: transparent;
+  }
+}
+
+// ******************
+
+.menu3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  @extend %transition;
+  text-decoration: none;
+  font-size: 16px;
+  background: var(--primary-theme-color);
+  border: 2px solid var(--primary-theme-color);
+  color: #fff !important;
+  border-radius: 10px;
+  font-weight: 600;
+  padding: 10px 20px;
+  &:hover{
+      background: transparent;
+      color: #fff;
+  }
+}
+
+.menu3::before,
+.menu3:after {
+  content: "";
+  pointer-events: none;
+  position: absolute;
+  width: 80%;
+  height: 80%;
+  opacity: 1;
+  transition: all 0.3s cubic-bezier(0.075, 0.83, 0.165, 1);
+  border: none;
+  border-radius: 10px;
+}
+
+/* On Hover the 'before' sudo element's is added an opacity of 0 and the */
+/* element is scaled to 2 times. */
+.menu3:hover:before {
+  animation: anim3 500ms ease forwards infinite;
+  border: 1px solid var(--primary-theme-color);
+}
+
+/* Delay is added to 'after' sudo element */
+.menu3:hover:after {
+  animation: anim3 500ms 150ms ease forwards infinite;
+  border: 1px solid var(--primary-theme-color);
+}
+
+@keyframes anim3 {
+  0% {
+    transform: scale(1.3);
+    opacity: 1;
+  }
+
+  50% {
+    border-color: var(--color-white);
+  }
+
+  100% {
+    transform: scale(1.7);
+    opacity: 0;
+  }
 }
