--- a/public/assets/scss/components/_featureHouse.scss
+++ b/public/assets/scss/components/_featureHouse.scss
@@ -1,36 +1,63 @@
 .featureHouse {
   padding-top: 150px;
   padding-bottom: 50px;
-  .textBody {
-    .title {
-      font-weight: 700;
-      color: var(--primary-theme-color);
-      position: relative;
-      display: inline;
-      &::before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 3px;
-        background: var(--primary-theme-color);
-        bottom: 0;
+
+  @media #{$md-layout-device} {
+    padding-top: 100px;
+    padding-bottom: 50px;
+  }
+  @media #{$sm-layout-device} {
+    padding-top: 100px;
+    padding-bottom: 50px;
+  }
+  .leftWrapper {
+    padding-right: 60px;
+    .textBody {
+      .title {
+        font-weight: 700;
+        color: var(--primary-theme-color);
+        position: relative;
+        display: inline;
+        &::before {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 3px;
+          background: var(--primary-theme-color);
+          bottom: 0;
+        }
+      }
+      .description {
+        font-size: 16px;
+        margin-top: 25px;
+
+        @media #{$sm-layout-device} {
+          font-size: 14px;
+          line-height: 25px;
+        }
       }
     }
-    .description {
-      font-size: 16px;
-      margin-top: 25px;
-    }
   }
+
   .itemsWrapper {
     .itemsBox {
       columns: 2;
       margin-top: 30px;
+      @media #{$md-layout-device} {
+        columns: 2;
+      }
+      @media #{$sm-layout-device} {
+        columns: 1;
+      }
       .items {
         .itemBody {
           margin-bottom: 30px;
           display: flex;
           align-items: flex-start;
           .leftSide {
+            img {
+              width: auto;
+            }
           }
           .rightSide {
             margin-left: 15px;
@@ -52,8 +79,43 @@
     }
   }
   .imgSection {
+    margin-top: 124px;
+    position: relative;
+
     img {
-    //   width: 700px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.185);
+      border-radius: 10px;
+    }
+
+    .overlay {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: #333;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      border-radius: 10px;
+      transition: all 0.3s linear;
+    }
+    .overlayBtn {
+      position: absolute;
+      display: inline;
+      top: 42%;
+      left: 50%;
+      transform: translateX(-50%);
+      opacity: 0;
+      border-radius: 10px;
+      transition: all 0.3s linear;
+    }
+    &:hover {
+      .overlay{
+        opacity: .7;
+      }
+      .overlayBtn{
+        opacity: 1;
+      }
     }
   }
+ 
 }
