--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -70,6 +70,7 @@ STYLE SHEET INDEX END
 
 @import "components/slider";
 @import "components/featureHouse";
+@import "components/priceingTable.scss";
 /****************************************************
                  Footer Styles
 *****************************************************/
