--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -71,6 +71,7 @@ STYLE SHEET INDEX END
 @import "components/slider";
 @import "components/featureHouse";
 @import "components/priceingTable.scss";
+@import "components/project_section";
 /****************************************************
                  Footer Styles
 *****************************************************/
