--- a/public/assets/scss/default/_typography.scss
+++ b/public/assets/scss/default/_typography.scss
@@ -120,6 +120,7 @@ p {
   font-family: var(--body-font);
   font-size: var(--font-size-lg);
   line-height: var(--line-height-lg);
+  color: var(--paragraph-color);
   margin-bottom: 30px;
   @media #{$sm-layout-device} {
     line-height: 30px;
