--- a/public/assets/scss/default/_variables.scss
+++ b/public/assets/scss/default/_variables.scss
@@ -8,8 +8,8 @@
   --secondary-theme-color: #3eb75e;
 
   // Typography Colors
-  --heading-color: #333;
-  --paragraph-color: #4D4D4D;
+  --heading-color: #1f1f25;
+  --paragraph-color: #757575;
 
   // Important Colors
   --gray-color: #808080;
