--- a/public/assets/scss/default/_typography.scss
+++ b/public/assets/scss/default/_typography.scss
@@ -19,7 +19,7 @@ body {
   font-size: var(--font-size-lg);
   line-height: var(--line-height-lg);
   font-family: var(--body-font);
-  color: var(--gray-color);
+  color: var(--paragraph-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
