--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -72,6 +72,7 @@ STYLE SHEET INDEX END
 @import "components/featureHouse";
 @import "components/priceingTable.scss";
 @import "components/project_section";
+@import "components/serviceOption";
 /****************************************************
                  Footer Styles
 *****************************************************/
