--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -73,6 +73,7 @@ STYLE SHEET INDEX END
 @import "components/priceingTable.scss";
 @import "components/project_section";
 @import "components/serviceOption";
+@import "components/testimonial";
 /****************************************************
                  Footer Styles
 *****************************************************/
