--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -74,6 +74,7 @@ STYLE SHEET INDEX END
 @import "components/project_section";
 @import "components/serviceOption";
 @import "components/testimonial";
+@import "components/aboutUs";
 /****************************************************
                  Footer Styles
 *****************************************************/
