add news section

--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -75,6 +75,7 @@ STYLE SHEET INDEX END
 @import "components/serviceOption";
 @import "components/testimonial";
 @import "components/aboutUs";
+@import "components/latestNews";
 /****************************************************
                  Footer Styles
 *****************************************************/
