--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -57,6 +57,12 @@ STYLE SHEET INDEX END
 @import "header/header";
 @import "header/menu";
 
+/****************************************************
+                 Footer Styles
+*****************************************************/
+
+@import "footer/footer";
+
 
 /****************************************************
                  Button Styles
@@ -76,6 +82,7 @@ STYLE SHEET INDEX END
 @import "components/testimonial";
 @import "components/aboutUs";
 @import "components/latestNews";
+
 /****************************************************
                  Footer Styles
 *****************************************************/
