--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -65,10 +65,11 @@ STYLE SHEET INDEX END
 
 
 /****************************************************
-                 Button Styles
+                 Common Styles
 *****************************************************/
 
 @import "common/button";
+@import "common/pageIntro";
 
 /****************************************************
                  Component Styles
