--- a/public/assets/scss/components/_aboutUs.scss
+++ b/public/assets/scss/components/_aboutUs.scss
@@ -229,3 +229,37 @@
     }
   }
 }
+
+
+.companyInfoSection_2{
+  .wrapper{
+    .leftSide{
+        h1 {
+          font-size: 15px;
+          font-weight: 600;
+          color: var(--primary-theme-color);
+        }
+        h2 {
+          font-size: 40px;
+          font-weight: 600;
+          margin-top: 14px;
+          @media #{$md-layout-device} {
+            font-size: 30px;
+          }
+          @media #{$sm-layout-device} {
+            font-size: 28px;
+          }
+        }
+        p {
+          margin-top: 14px;
+          font-size: 15px;
+          @media #{$md-layout-device} {
+            padding: 0;
+          }
+          @media #{$sm-layout-device} {
+            padding: 0;
+          }
+        }
+    }
+  }
+}
